--- a/style.css
+++ b/style.css
@@ -1,49 +1,59 @@
-body {
+﻿body {
     padding-top: 20px;
     padding-bottom: 40px;
 }
 
-
 .jumbotron {
-    margin: 60px 0;
+    margin: 3.750em 0;
     text-align: center;
+    background-color: #fff;
+    padding: 0;
 }
 .jumbotron h1 {
     font-size: 50px;
     line-height: 1;
 }
-.jumbotron .btn-large {
+.jumbotron .btn-lg {
     font-size: 21px;
     padding: 14px 24px;
 }
-
-
+/* Hub jumbotron stuff */
+#hub-logo {float: right;}
+#hub-jumbotron-text {text-align:left;}
+.jumbotron .sub-lead {font-size:14px;}
+.jumbotron .lead {
+	margin-bottom: 20px;
+	font-size: 21px;
+	font-weight: 200;
+	line-height: 30px;
+}
+.sub-lead {margin-top: -15px;}
 /* Custom container */
 .container-narrow {
     margin: 0 auto;
     max-width: 700px;
 }
+.container-narrow > hr {margin: 30px 0;}
+/*Container-narrow from bootstrap 2.3.2*/
+@media (min-width: 668px) {.container {max-width: 730px;}}
 .container-narrow > hr {
-    margin: 30px 0;
+  margin: 30px 0;
+  margin-left: auto;
+  margin-right: auto;
 }
-
-
 /* Mod download menu */
-.dropdown-menu {
+.jumbotron .btn-lg .dropdown-menu {
     padding-left: 5px;
     padding-right: 5px;
 }
 
-.sub-lead {
-    margin-top: -15px;
-}
-
 /* Centered subheadings */
-.subheadings .span6 {
-    text-align: center;
+.subheadings .col-md-6 {
+	text-align: center;
+	float: left;
 }
 
-.subheadings .span6 p {
+.subheadings .col-md-6 p {
     margin-left: 10px;
     margin-right: 10px;
 }
@@ -54,10 +64,94 @@ body {
     padding-left: 20px;
 }
 
-/* Hub jumbotron stuff */
-#hub-logo {
-    float: right;
+/* Award/Badge box at member records */
+.award-box {
+    text-align: right;
+    padding-top: 10px;
 }
-#hub-jumbotron-text {
-    text-align: left;
+
+/* Some additional badge colors and style */
+.badge {
+	cursor: default;
+	-moz-border-radius:0.25em;
+	-webkit-border-radius:0.25em;
+	border-radius:0.25em;}
+.badge-bronze {
+	background-color: #BD6F2D;
 }
+.badge-silver {
+	background-color: #B7BDBD;
+}
+.badge-diamond{background-color: #E0FFFF;
+    color: #446;
+    border: 1px solid #AAA;
+}
+.badge-inverse {
+	background-color: #333;
+}
+.badge-warning {
+	background-color: #f89406;
+}
+
+/* If this seems weird, it is */
+#content {
+    clear: both;
+    overflow: hidden;
+}
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+  /* Remove the padding we set earlier */
+  .footer {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  /* Space out the masthead */
+  .header {
+	margin-bottom: 30px; 
+  }
+  /* Remove the bottom border on the jumbotron for visual effect */
+  .jumbotron {
+	border-bottom: 0;
+  }
+}
+.footer {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+h1, h2, h3 {line-height: 40px;}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: bold;
+	font-family: inherit;
+	text-rendering: optimizelegibility;
+	margin-top: 10px;
+	margin-right: 0em;
+	margin-bottom: 10px;
+	margin-left: 0em;
+}
+h2 {
+	display: block;
+	-webkit-margin-before: 0.83em;
+	-webkit-margin-after: 0.83em;
+	-webkit-margin-start: 0em;
+	-webkit-margin-end: 0em;
+}
+@-webkit-viewport   {
+	width: device-width; 
+}
+@-moz-viewport {
+	width: device-width;
+}
+@-ms-viewport {
+	width: device-width;
+}
+@-o-viewport {
+	width: device-width;
+}
+@viewport {	
+	width: device-width; 
+}
+@-ms-viewport  { 
+	width: device-width; 
+}
+
