--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ hr {
 }
 .container {
     margin: 0 auto;
-    max-width: 730px;
+    max-width: 800px;
 }
 /* Mod download menu */
 .jumbotron .dropdown-menu {
@@ -213,4 +213,7 @@ h2 {
 }
 @-ms-viewport  { 
 	width: device-width; 
+}
+iframe {
+	border: none;
 }
