--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,7 @@
 <!--<link rel="next" href="infos.html" />-->
 
 <!-- CSS -->
-<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet prefetch" />
-<link href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet prefetch" />
+<link href="//vps.wolfy1339.tk/Resources/css/m8tro-blue.min.css" rel="stylesheet prefetch" />
 <link href="/style.css" rel="stylesheet prefetch" />
 
 <!-- Compatibility layer for ie -->
