--- a/style.css
+++ b/style.css
@@ -24,9 +24,10 @@ a h3 {
     background: -o-linear-gradient(top, rgba(255, 255, 255, .15)0, rgba(0, 0, 0, .15)100%);
     background: -ms-linear-gradient(top, rgba(255, 255, 255, .15)0, rgba(0, 0, 0, .15)100%);
 }
-a.text-muted:hover, a.text-muted:focus {
-	text-decoration:none;
-	color:#777;
+a.text-muted:hover,
+a.text-muted:focus {
+    text-decoration: none;
+    color: #777;
 }
 .nav-pills li {
     padding-right: 0.2em;
@@ -44,22 +45,25 @@ a.text-muted:hover, a.text-muted:focus {
     font-size: 21px;
     padding: 14px 24px;
 }
-.jumbotron .sub-lead {font-size:14px;}
+.jumbotron .sub-lead {
+    font-size: 14px;
+}
 .jumbotron .lead {
-	margin-bottom: 20px;
-	font-size: 21px;
-	font-weight: 200;
-	line-height: 30px;
+    margin-bottom: 20px;
+    font-size: 21px;
+    font-weight: 200;
+    line-height: 30px;
 }
-.sub-lead {margin-top: -15px;}
+.sub-lead {
+    margin-top: -15px;
+}
+
 /* Custom container */
-hr {
-	margin: 30px 0;
-}
 .container {
     margin: 0 auto;
     max-width: 800px;
 }
+
 /* Mod download menu */
 .jumbotron .dropdown-menu {
     padding-left: 5px;
@@ -74,9 +78,8 @@ hr {
 
 /* Centered subheadings */
 .subheadings .col-md-6 {
-	text-align: center;
+    text-align: center;
 }
-
 .subheadings .col-md-6 p {
     margin-left: 10px;
     margin-right: 10px;
@@ -92,7 +95,7 @@ hr {
 #hub-logo {
     float: right;
 }
-@media (max-width : 390px) {
+@media (max-width: 390px) {
     #hub-logo {
         float: none;
     }
@@ -106,7 +109,9 @@ hr {
     margin-top: 10px;
     margin-bottom: 5px;
 }
-.social-facebook, .social-github, .social-twitter {
+.social-facebook,
+.social-github,
+.social-twitter {
     display: inline-block;
     height: 20px;
     width: 18%;
@@ -120,100 +125,107 @@ hr {
 
 /* Some additional badge colors and style */
 .badge {
-	cursor: default;
+    cursor: default;
 }
 .label {
     cursor: default;
 }
 .badge-bronze {
-	background-color: #BD6F2D;
+    background-color: #BD6F2D;
 }
 .badge-silver {
-	background-color: #B7BDBD;
+    background-color: #B7BDBD;
 }
-.badge-diamond{background-color: #E0FFFF;
+.badge-diamond {
+    background-color: #E0FFFF;
     color: #446;
     border: 1px solid #AAA;
 }
 .badge-inverse {
-	background-color: #333;
+    background-color: #333;
 }
 .badge-warning {
-	background-color: #f89406;
+    background-color: #f89406;
 }
 .label {
-	font-weight: bold;
-	padding: 2px 4px;
-	font-size: 11.844px;
-	line-height: 14px;
-	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+    font-weight: bold;
+    padding: 2px 4px;
+    font-size: 11.844px;
+    line-height: 14px;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
+
 /* If this seems weird, it is */
 #content {
     clear: both;
     overflow: hidden;
 }
 ul {
-	margin: 0 0 10px 25px;
-	padding: 0;
+    margin: 0 0 10px 25px;
+    padding: 0;
 }
 li {
-	line-height: 20px;
-	font-size: 14px;
+    line-height: 20px;
+    font-size: 14px;
 }
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .footer {
-    padding-right: 0;
-    padding-left: 0;
-  }
-  /* Space out the masthead */
-  .header {
-	margin-bottom: 30px; 
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-	border-bottom: 0;
-  }
+    /* Remove the padding we set earlier */
+    .footer {
+        padding-right: 0;
+        padding-left: 0;
+    }
+    /* Space out the masthead */
+    .header {
+        margin-bottom: 30px;
+    }
+    /* Remove the bottom border on the jumbotron for visual effect */
+    .jumbotron {
+        border-bottom: 0;
+    }
 }
 .footer {
-  padding-right: 15px;
-  padding-left: 15px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
-h1, h2, h3 {line-height: 40px;}
-
+h1, h2, h3 {
+    line-height: 40px;
+}
 h1, h2, h3, h4, h5, h6 {
-	font-weight: bold;
-	font-family: inherit;
-	text-rendering: optimizelegibility;
-	margin: 10px 0em;
+    font-weight: bold;
+    font-family: inherit;
+    text-rendering: optimizelegibility;
+    margin: 10px 0em;
 }
 h2 {
-	display: block;
-	-webkit-margin-before: 0.83em;
-	-webkit-margin-after: 0.83em;
-	-webkit-margin-start: 0em;
-	-webkit-margin-end: 0em;
+    display: block;
+    -webkit-margin-before: 0.83em;
+    -webkit-margin-after: 0.83em;
+    -webkit-margin-start: 0em;
+    -webkit-margin-end: 0em;
 }
-@-webkit-viewport   {
-	width: device-width; 
+@-webkit-viewport {
+    width: device-width;
 }
 @-moz-viewport {
-	width: device-width;
+    width: device-width;
 }
 @-ms-viewport {
-	width: device-width;
+    width: device-width;
 }
 @-o-viewport {
-	width: device-width;
+    width: device-width;
 }
-@viewport {	
-	width: device-width; 
+@viewport {
+    width: device-width;
 }
-@-ms-viewport  { 
-	width: device-width; 
+@-ms-viewport {
+    width: device-width;
 }
 iframe {
-	border: none;
+    border: 0 none !important;
+}
+hr {
+    margin: 30px 0;
 }
