--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,10 @@
-<ul class="nav nav-pills pull-right" role="navigation">
-  <li class="active"><a href="Home.html">Hub</a></li>
-  <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
-  <li><a href="build.html">BuildServ</a></li>
-  <li><a href="irc.html">IRC</a></li>
-  <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
-</ul>
+<div class="masthead">
+  <ul class="nav nav-pills pull-right">
+    <li class="active"><a href="Home.html">Hub</a></li>
+    <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
+    <li><a href="build.html">BuildServ</a></li>
+    <li><a href="irc.html">IRC</a></li>
+    <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
+  </ul>
+  <h2>Wolfy1339<br><small>{{ page.title }}</small></h2>
+</div>
