--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,12 @@
 <div class="masthead">
   <ul class="nav nav-pills pull-right">
-    <li class="active"><a href="Home.html">Hub</a></li>
-    <li><a href="cookieclicker/index.html">Cookie Clicker</a></li>
-    <li><a href="build.html">BuildServ</a></li>
-    <li><a href="irc.html">IRC</a></li>
-    <li class="disabled" title="Not released yet"><a href="#">TPT Mod</a></li>
+    <li{% if page.title == "Hub" %} class="active"{% endif %}><a href="Home.html">Hub</a></li>
+    <li{% if page.title == "IRC" %} class="active"{% endif %}><a href="irc.html">IRC</a></li>
+    <li {% if page.title == "Hub" %}class="active"{% else %}class="disabled"{% endif %} title="Not released yet"><a href="#">TPT Mod</a></li>
   </ul>
-  <h2>Wolfy1339<br><small>{{ page.title }}</small></h2>
+  {% if page.nav %}
+  <h2>Wolfy1339<br><small>{{ page.nav }}</small></h2>
+  {% else %}
+  <h2>Wolfy1339<br><small>{{ page.tile }}</small></h2>
+  {% endif %}
 </div>
