Fix Hub active state

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="masthead">
   <ul class="nav nav-pills pull-right">
-    {% if page.title == "Hub" %}
+    {% if page.title == "Sandbox" %}
     <li class="active"><a href="Home.html">Hub</a></li>
     {% else %}
     <li><a href="Home.html">Hub</a></li>
