--- a/style.css
+++ b/style.css
@@ -9,12 +9,15 @@ body {
 .index {
     background-color: #eee;
 }
-a h3 {
-    text-indent: 15%
+.index .h3 {
+    text-align: center;
+    font-weight: bold;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .logo {
-    display: inline-block;
-    overflow: hidden;
+    margin: auto;
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .45), inset 0 2px 0 rgba(255, 255, 255, .4);
             box-shadow: 0 0 10px rgba(0, 0, 0, .45), inset 0 2px 0 rgba(255, 255, 255, .4);
     max-height: 256px;
