Change the background color to be darker

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     margin-top: 20px;
 }
 .index {
-    background-color: #eee;
+    background-color: #333;
 }
 .index .h3 {
     text-align: center;
