--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ ul {
 }
 li {
     line-height: 20px;
-    font-size: 14px;
+    margin-top: 4px;
 }
 
 /* Responsive: Portrait tablets and up */
