--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ body {
 }
 .index .h3 {
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
 .logo {
     margin: auto;
@@ -38,7 +37,6 @@ a.text-muted:focus {
 
 /* General jumbotron styling */
 .jumbotron {
-    margin: 3.750em 0 1.755em;
     text-align: center;
 }
 .jumbotron p {
