--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,5 +4,5 @@
 </footer>
 
 <!-- JavaScript -->
-<script src="//vps.wolfy1339.tk/Resources/js/jquery.min.js"></script>
-<script src="//vps.wolfy1339.tk/Resources/js/bootstrap.min.js"></script>
+<script src="//vps.wolfy1339.com/Resources/js/jquery.min.js"></script>
+<script src="//vps.wolfy1339.com/Resources/js/bootstrap.min.js"></script>
